samples/_failures_safe/1761600206_a58801_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4cb3acc7.c: In function ‘tokenize’:
./samples/SAFE/__tmp_4cb3acc7.c:165:5: error: expected expression at end of input
  165 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_4cb3acc7.c:165:5: error: expected declaration or statement at end of input
